up to Super Power Pack. Big Commit - some changes